# frontend

./: .env.default  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: docker-publish.yml
frontend/: __init__.py  __main__.py  app.py  config.py  schemas.py
frontend/client/: api.py  measurements.py  schemas.py  trials.py
frontend/forms/: upload.py
frontend/static/: print.css
frontend/templates/: base.html  index.html  measurements.html  navbar.html
frontend/view/: index.py
frontend/views/: index.py  measurement.py
