[tool.poetry]
name = "PDF-Parser-Frontend"
version = "0.1.0"
description = ""
authors = ["Pavel Vinnikov <vinnpavel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
pydantic = "^1.9.0"
httpx = "^0.22.0"
typer = "^0.4.0"
# fix click 8.1.0 errors
click = "8.0.4"
Flask-WTF = "^1.0.1"

[tool.poetry.dev-dependencies]
# fix bandit 1.7.3-4 errors
bandit = "1.7.2"
mypy = "^0.942"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
